k8sFiles/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-api-deployment
  labels:
    app: inventory-app
    type: api-end
spec:
  template:
    metadata:
      name: nagp-api-pod
      labels:
        app: inventory-app
        type: api-end
    spec:
      containers:
        - name: nagp-api-container
          image: amitsarohi/nagp-sarohi-inventory-api:latest  # <-- updated image
          ports:
            - containerPort: 5000
  replicas: 4
  selector:
    matchLabels:
      type: api-end
      app: inventory-app
