k8sFiles/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-api-clusterip-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: inventory-app
    type: api-end
