k8sFiles/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-ui-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: inventory-app
    type: ui-end
  ports:
    - port: 80
      targetPort: 80
